--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta charset="UTF-8">
 <head>
 	<title>Hello Masterclass</title>
 </head>
@@ -7,5 +8,9 @@
 Май сме на masterclass?
 
 <p>И правим промени :)</p>
+
+
+<p>lskdjflkdsf</p>
+
 </body>
 </html>
