--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 
 <p>И правим промени :)</p>
 
+<form action="https://fabform.io/f/qGN_7Xu" method="post">
+  <label for="firstName">First Name</label>
+  <input name="firstName" type="text" required>
+  <label for="lastName">Last Name</label>
+  <input name="lastName" type="text" required>
+  <label for="email">Email</label>
+  <input name="email" type="email" required>
+  <button class="button is-link" type="submit">Test</button>
+</form>
 
-<p>lskdjflkdsf</p>
 
 </body>
 </html>
